@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230621"
-#define public MagickPackageReleaseDate "snapshot-20230621"
+#define public MagickPackageVersionAddendum ".020230627"
+#define public MagickPackageReleaseDate "snapshot-20230627"
